# MyOpenCVDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/loslink/opencv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  image_process.cpp
app/src/main/java/com/loslink/opencv/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/loslink/opencv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
